--- a/toolbox/.classpath
+++ b/toolbox/.classpath
@@ -4,7 +4,6 @@
     <classpathentry kind="lib" path="resources"/>
     <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="lib" path="lib/log4j.jar" sourcepath="G:/java/dev/jakarta-log4j-1.1.3/Src.zip"/>
-    <classpathentry kind="lib" path="lib/jakarta-regexp-1.2.jar"/>
     <classpathentry kind="lib" path="lib/dom.jar"/>
     <classpathentry kind="lib" path="lib/EXML.jar"/>
     <classpathentry kind="lib" path="lib/jode.jar"/>
@@ -17,5 +16,6 @@
     <classpathentry kind="lib" path="lib/commons-collections.jar"/>
     <classpathentry kind="lib" path="lib/skinlf.jar"/>
     <classpathentry kind="lib" path="lib/commons-lang.jar"/>
+    <classpathentry kind="lib" path="lib/jakarta-regexp.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
