--- a/toolbox/build.xml
+++ b/toolbox/build.xml
@@ -256,6 +256,11 @@
             overwrite ="false" />
 
         <unjar 
+        	src       ="${lib}/commons-net.jar" 
+            dest      ="${classes}" 
+            overwrite ="false" />
+
+        <unjar 
         	src       ="${lib}/skinlf.jar" 
             dest      ="${classes}" 
             overwrite ="false" />
