--- a/trunk/toolbox/.classpath
+++ b/trunk/toolbox/.classpath
@@ -17,5 +17,6 @@
     <classpathentry kind="lib" path="lib/skinlf.jar"/>
     <classpathentry kind="lib" path="lib/commons-lang.jar"/>
     <classpathentry kind="lib" path="lib/jakarta-regexp.jar"/>
+    <classpathentry kind="lib" path="lib/commons-net.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
