--- a/toolbox/build.xml
+++ b/toolbox/build.xml
@@ -431,6 +431,7 @@
     <!--=============================-->
     <!--            JUNIT            -->
     <!--=============================-->
+    
     <target name="junit" depends="init"
             description="Executes JUnit tests and generates report. Use -Djunit.class to single out test class.">
 
@@ -438,12 +439,12 @@
         <mkdir dir="${junit.xml}"/>
         <mkdir dir="${junit.html}"/>
         
-        <delete>
+        <delete failonerror="false">
             <fileset dir="${junit.xml}" includes="**/TEST*.xml"></fileset>
         </delete>
         
-        <!-- <junit printSummary="yes" haltonfailure="no"> -->
-        
+        <!-- <junit printSummary="yes" haltonfailure="no"> "withOutAndErr" -->
+
         <junit printSummary="withOutAndErr" haltonfailure="no">
 
             <classpath>
