--- a/trunk/toolbox/build.xml
+++ b/trunk/toolbox/build.xml
@@ -181,7 +181,16 @@
             description="Compiles the source code">
     
         <property name="cp" refid="project.class.path"/>
-        <echo message="Classpath=${cp}"/>
+
+		<!-- Prints out the classpath -->        
+        <property name="tokenizer.input"    value="${cp}"/>
+        <property name="tokenizer.delimiter" value=";"/>
+        <antcall target="tokenizer" inheritall="true" inheritrefs="true"/>
+        <echo message="CLASSPATH"/>
+        <echo message="=============="/>
+        <echo message="${tokenizer.output}"/>
+        
+        <!--echo message="Classpath=${cp}"/-->
         
         <javac 
             srcdir="${src}" 
@@ -733,5 +742,74 @@
             showCredits="no"/>
             
     </target>
+    
+    <!--=============================--> 
+    <!--         TOKENIZER           -->
+    <!--=============================-->
+	<target name="tokenizer">
+	
+		<echo message="Running tokenizer..."/>
+		
+        <script language="beanshell"> <![CDATA[
+
+			dumpProps(Hashtable props) 
+			{
+		        List list = new ArrayList();        
+		        int max = 0;
+		        
+		        for (Iterator i = props.keySet().iterator(); i.hasNext(); )
+		        {
+		            Object name = i.next();
+		            //if(name.length() > max)
+		            //    max = name.length();
+		            list.add(name);
+		        }
+		
+		        Object[] arr = list.toArray();
+		        Arrays.sort(arr);
+		
+		        for(int i=0; i<arr.length; i++ )
+		        {
+		            Object name = (Object)arr[i];
+		            Object value = props.get(name);
+		            print(name + " = " + value);
+		        }
+			}
+	
+			////////////////////////////////////////////////////////////////////		
+			
+			print("Called tokenizer!");
+				
+			//javap(toolbox);
+			javap(self);
+			
+			dumpProps(toolbox.getProperties());			
+		    
+			input = toolbox.getProperty("tokenizer.input");
+			
+			print("tokenizer.input=" + input);			
+		
+			delimiter = toolbox.getProperty("tokenizer.delimiter");
+			                	
+			print ("tokenizer.delimiter=" + delimiter);
+			
+			tokenizer = new StringTokenizer(input, delimiter);
+			
+			StringBuffer sb = new StringBuffer();
+			while (tokenizer.hasMoreTokens())
+				sb.append(tokenizer.nextToken().toString() + "\n");
+			    //print(tokenizer.nextToken());
+			    
+			print (sb.toString());    
+			    
+			toolbox.setNewProperty("tokenizer.output", sb.toString());
+
+			dumpProps(toolbox.getProperties());
+
+			//==================================================================
+        ]]></script>
+        
+  	</target>
+    
     
 </project>
